--- a/2048/MainWindow.xaml
+++ b/2048/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:_2048"
         mc:Ignorable="d"
         Title="MainWindow" Height="352" Width="249" KeyDown="Window_KeyDown">
-    <Grid x:Name="MyGrid">
+    <Grid x:Name="MyGrid" Background="Black">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width ="*"/>
             <ColumnDefinition Width ="*"/>
@@ -18,6 +18,6 @@
             <RowDefinition Height="*"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
-        <TextBlock x:Name="Score" Grid.ColumnSpan="3" HorizontalAlignment="Center" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Center"/>
+        <Label x:Name="Score" Grid.ColumnSpan="3" Content="Content" VerticalContentAlignment="Center" HorizontalContentAlignment="Center"/>
     </Grid>
 </Window>
