--- a/2048/MainWindow.xaml
+++ b/2048/MainWindow.xaml
@@ -5,8 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:_2048"
         mc:Ignorable="d"
-        Title="MainWindow" Height="330" Width="247" KeyDown="Window_KeyDown">
-    <Grid x:Name="MyGrid" Background="#FFE3EDFF">
+        Title="2048" Height="471.928" Width="353.231" KeyDown="Window_KeyDown" WindowStartupLocation="CenterScreen">
+    <Grid x:Name="MyGrid" Background="#FFF3F3F3" Margin="3">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width ="*"/>
             <ColumnDefinition Width ="*"/>
@@ -20,7 +20,7 @@
             <RowDefinition Height="*"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
-        <Label x:Name="Score" Grid.ColumnSpan="2" Content="0" VerticalContentAlignment="Center" HorizontalContentAlignment="Right" FontSize="18" FontWeight="Bold" Grid.Column="2"/>
-        <Label x:Name="ScoreText" Grid.ColumnSpan="2" Content="Score:" VerticalContentAlignment="Center" HorizontalContentAlignment="Right" FontSize="18" FontWeight="Bold" Margin="1,0,0,0"/>
+        <Label x:Name="Score" Grid.ColumnSpan="2" Content="0" VerticalContentAlignment="Center" HorizontalContentAlignment="Right" FontSize="25" FontWeight="Bold" Grid.Column="2"/>
+        <Label x:Name="ScoreText" Grid.ColumnSpan="2" Content="Score:" VerticalContentAlignment="Center" HorizontalContentAlignment="Right" FontSize="25" FontWeight="Bold"/>
     </Grid>
 </Window>
